--- a/index.html
+++ b/index.html
@@ -661,7 +661,7 @@
       </div>
 
       <!-- Pricing Table Tabs -->
-      <!-- <ul class="nav nav-tabs" id="myTab" role="tablist" data-aos="fade-up" data-aos-duration="1500">
+      <ul class="nav nav-tabs" id="myTab" role="tablist" data-aos="fade-up" data-aos-duration="1500">
         <li class="nav-item" role="presentation">
           <button class="nav-link active" id="monthly-tab" data-toggle="tab" data-target="#monthly" type="button"
             role="tab" aria-controls="monthly" aria-selected="true">All Weekend</button>
@@ -682,7 +682,7 @@
                     <span>Get all of it</span>
                   </div>
                   <div class="pricing">
-                    <h3>74.00 <span>/ticket</span></h3>
+                    <h3>89.00 <span>/ticket</span></h3>
                   </div>
                   <div class="ticket_pic">
                     <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
@@ -714,7 +714,7 @@
                     <span>All Parties</span>                        
                   </div>
                   <div class="pricing">
-                    <h3>€49.00 <span>/ticket</span></h3>
+                    <h3>54.00 <span>/ticket</span></h3>
                   </div>
                   <div class="ticket_pic">
                     <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
@@ -746,7 +746,7 @@
                     <span>3 Party Nights (Fr, Sa, Su)</span>
                   </div>
                   <div class="pricing">
-                    <h3>39.00<span>/ticket</span></h3>
+                    <h3>44.00<span>/ticket</span></h3>
                   </div>
                   <div class="ticket_pic">
                     <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
@@ -782,7 +782,7 @@
                   <span>Get all of it Saturday</span>
                 </div>
                 <div class="pricing">
-                  <h3>100.00<span>/ticket</span></h3>
+                  <h3>79.00<span>/ticket</span></h3>
                 </div>
                 <div class="ticket_pic">
                   <img src="images/Ticket_marathon.png" alt="ticket frankfurt bachata marathon">
@@ -798,7 +798,7 @@
                   </li>
                 </ul>
                 <div class="btn_block white_btn">
-                  <a href="#" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                  <a href="https://buy.stripe.com/9AQ16lfn88nbgVO3cg" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
                   <div class="btn_bottom"></div>
                 </div>
               </div>
@@ -826,7 +826,7 @@
                   </li>
                 </ul>
                 <div class="btn_block">
-                  <a href="#" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
+                  <a href="https://buy.stripe.com/5kAeXb5MydHv5d6cMR" class="btn puprple_btn ml-0 disabled" style="pointer-events: none; opacity: 0.6;">Buy Ticket</a>
                   <div class="btn_bottom"></div>
                 </div>
               </div>
@@ -836,7 +836,7 @@
         <p class="contact_text text-center" data-aos="fade-up" data-aos-duration="1500">For <strong>GROUP-PASSES -></strong><a href="special-offers.html"> Click Here</a>.</p>
         <p class="contact_text text-center" data-aos="fade-up" data-aos-duration="1500">Not
           sure what to choose ? <a href="contact.html">contact us</a> or check <a href="#faqsec">FAQ Section</a>.</p>
-      </div> -->
+      </div>
     </div>
   </div>
   <!-- container start end -->
