--- a/index.html
+++ b/index.html
@@ -657,7 +657,7 @@
     <div class="container">
       <div class="section_title" data-aos="fade-up" data-aos-duration="1500" data-aos-delay="300">
         <span class="title_badge">Pricing</span>
-        <h2>TICKETS UNAVAILABLE</h2>
+        <h2>TICKETS AVAILABLE NOW</h2>
       </div>
 
       <!-- Pricing Table Tabs -->
