--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
         
         <!-- Who is this event for? - As an extension -->
         <div style="margin-top: 40px; text-align: center;">
-            <h3 style="color: #fff; margin-bottom: 20px;">Who is this event for?</h3>
+            <h3 style="color: #000000; margin-bottom: 20px;">Who is this event for?</h3>
             <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 15px; margin-bottom: 30px;">
                 <span style="background: rgba(0, 0, 0, 0.2); color: #fff; padding: 8px 20px; border-radius: 50px; border: 1px solid #84309a;">✅ For Beginners</span>
                 <span style="background: rgba(0, 0, 0, 0.2); color: #fff; padding: 8px 20px; border-radius: 50px; border: 1px solid #84309a;">✅ For Advanced</span>
